Umbenennung des Child Theme

--- a/wordpress/themes/twentyseventeen-child-bfw/style.css
+++ b/wordpress/themes/twentyseventeen-child-bfw/style.css
@@ -1,9 +1,9 @@
 /*
- Theme Name:   Twenty Seventeen Child
+ Theme Name:   Twenty Seventeen Child BFW
  Description:  Child Theme von Twenty Seventeen für BFW
  Author:       Jürgen Seliger
  Author URI:   http://www.webtimiser.de
  Template:     twentyseventeen
  Version:      1.0
- Text Domain:  twentyseventeen-child
+ Text Domain:  twentyseventeen-child-bfw
 */
