--- a/wordpress/themes/twentythirteen-child-immo/style.css
+++ b/wordpress/themes/twentythirteen-child-immo/style.css
@@ -1,13 +1,9 @@
 /*
-Theme Name:     Twenty Thirteen Child
-Theme URI:      https://nowhere.com/themes/twentythirteen-child/
+Theme Name:     Twenty Thirteen Child Immo
+Description:    Child Theme von Twenty Thirteen für Seliger Immobilien.
 Author:         Jürgen Seliger
-Author URI:     https://nowhere.org/
-Description:    ??? Just a copy of Twenty Thirteen.
+Author URI:     https://seliger-immobilien.de
 Template:       twentythirteen
 Version:        1.0.0
-License:        GNU General Public License v2 or later
-License URI:    http://www.gnu.org/licenses/gpl-2.0.html
-Tags:           light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
 Text Domain:    twentythirteen-child-immo
 */
